# implicit_filter

./: .buildinfo  .gitignore  LICENSE  api.html  dkrz_setup_impfilt_env.sh  environment.yml  genindex.html  implicit_filter.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  readme.md  requirements.txt  search.html  searchindex.js  setup.cfg
.doctrees/: environment.pickle  implicit_filter.doctree  index.doctree  modules.doctree
.github/workflows/: pages.yml  release.yml  test.yml
_modules/: index.html
_modules/implicit_filter/: fesom_filter.html  filter.html  icon_filter.html  latlon_filter.html  nemo_filter.html  triangular_filter.html
_modules/implicit_filter/utils/: _auxiliary.html  conversion_tools.html
_sources/: index.rst.txt  modules.rst.txt
docs/: api.rst  conf.py  implicit_filter.rst  index.rst  modules.rst
examples/: basic_triangular_mesh.ipynb  data_masking_example.ipynb  dkrz_gpu.ipynb  element_filtering_example.ipynb  intro_icon_filtering.ipynb  lat_long_grid_example.ipynb  multiple_input_data.ipynb  multiple_input_vector_data.ipynb  nemo_example.ipynb  readme.md  real_vector_data.ipynb  scalar_jax_only.ipynb  spectra_extraction.ipynb  sst_jax_cupy.ipynb  synthetic_vector_data.ipynb  variable_filter_scales.ipynb  vector_jax_only.ipynb  velocity_jax_cupy.ipynb
examples/slurm/: batch_script.sh  run_script.py
implicit_filter/: __init__.py  _auxiliary.py  _jax_function.py  _numpy_functions.py  _utils.py  amgx_filter.py  cupy_filter.py  filter.py  jax_filter.py  latlon_filter.py  nemo_filter.py  numpy_filter.py
implicit_filter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/implicit_filter/: __init__.py  _numpy_functions.py  _utils.py  fesom_filter.py  filter.py  icon_filter.py  jax_filter.py  latlon_cupy_filter.py  latlon_filter.py  nemo_cupy_filter.py  nemo_filter.py  numpy_filter.py  triangular_filter.py
src/implicit_filter/utils/: _auxiliary.py  _jax_elem_function.py  _jax_function.py  _numpy_functions.py  conversion_tools.py  utils.py
test/: auxiliary.py  bench_element_filtering.py  test_auxiliary.py  test_conversion_tools.py  test_edge_cases.py  test_element_filtering.py  test_element_integration.py  test_filter_errors.py  test_filter_integration.py  test_jax_elem_consistency.py  test_jax_function.py  test_jax_numpy_consistency.py  test_matrix_properties.py  test_numpy_functions.py  test_serialization.py  test_utils.py
