[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "implicit_filter"
version = "0.3.0"
description = "Python package implementing implicit filtering method on any type of mesh."
readme = "readme.md"
authors = [{ name = "Kacper Nowak", email = "kacper.nowak@awi.de" },
           { name = "Aaron Wienkers", email = awienkers@ethz.ch"}]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

requires-python = ">=3.9,<3.11"

dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

