[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "implicit_filter"
version = "1.1.0"
description = "Python package implementing implicit filtering method on any type of mesh."
readme = "readme.md"
authors = [{ name = "Kacper Nowak", email = "kacper.nowak@awi.de" },
           { name = "Aaron Wienkers", email = "awienkers@ethz.ch" },
           { name = "Willi Rath", email = "wrath@geomar.de" }]

classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Environment :: GPU",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License"
]

requires-python = ">=3.10"

dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
gpu_c11 = [
    "cupy-cuda11x"
]
gpu_c12 = [
    "cupy-cuda12x"
]
gpu = [
    "cupy"
]
amgx = [
    "pyamgx"
]

[project.urls]
Homepage = "https://github.com/FESOM/implicit_filter"

[tool.setuptools]
platforms = ["any"]
zip-safe  = false
include-package-data = true


