[metadata]
name = implicit_filter
version = 0.1.0
author = Kacper Nowak
author_email = kacper.nowak@awi.de
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FESOM/implicit_filter
project_urls =
    Docs = https://fesom.github.io/implicit_filter/
    Bug Tracker = https://github.com/FESOM/implicit_filter/-/issues
    repository = https://github.com/FESOM/implicit_filter
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = implicit_filter
packages = find:
python_requires = >=3.9

[options.packages.find]
where = implicit_filter